extends Node2D

func play_climbing() -> void:
	$Climbing.play()
	
func play_death_owl() -> void:
	$DeathOwl.play()
	
func play_death_snake() -> void:
	$DeathSnake.play()
	
func play_jump() -> void:
	$Jump.play()
	
func play_menu_select() -> void:
	$MenuSelect.play()
	
func play_owl_hoot() -> void:
	$OwlHoot.play()
